syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

package starscope.event;

option go_package = "github.com/loomi-labs/star-scope/event/walleteventpb";

message Coin {
  string denom = 1;
  string amount = 2;
}

message CoinReceivedEvent {
  string sender = 1;
  Coin coin = 2;
}

message OsmosisPoolUnlockEvent {
  google.protobuf.Duration duration = 1;
  google.protobuf.Timestamp unlock_time = 2;
}

message UnstakeEvent {
  google.protobuf.Timestamp completion_time = 1;
  Coin coin = 2;
}

message NeutronTokenVestingEvent {
  uint64 amount = 1;
  google.protobuf.Duration duration = 2;
  google.protobuf.Timestamp unlock_time = 3;
}

message VoteReminderEvent {
  uint64 proposal_id = 1;
  google.protobuf.Timestamp vote_end_time = 2;
}

message VotedEvent {
  uint64 proposal_id = 1;
  string option = 2;
}

message WalletEvent {
  uint64 chain_id = 1;
  string wallet_address = 2;
  google.protobuf.Timestamp timestamp = 3;
  google.protobuf.Timestamp notify_time = 4;
  oneof event {
    CoinReceivedEvent coin_received = 5;
    OsmosisPoolUnlockEvent osmosis_pool_unlock = 6;
    UnstakeEvent unstake = 7;
    NeutronTokenVestingEvent neutron_token_vesting = 8;
    VoteReminderEvent vote_reminder = 9;
    VotedEvent voted = 10;
  }
}
